--- a/LAB_7/Moroz Vladyslav/AudioLib_lab7/AudioLib_lab7/AudioLib_lab7.csproj
+++ b/LAB_7/Moroz Vladyslav/AudioLib_lab7/AudioLib_lab7/AudioLib_lab7.csproj
@@ -220,6 +220,7 @@
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\User\Create.cshtml" />
     <Content Include="Views\User\Details.cshtml" />
+    <Content Include="Views\User\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
