--- a/LAB_7/Moroz Vladyslav/AudioLib_lab7/DAL/DAL.csproj
+++ b/LAB_7/Moroz Vladyslav/AudioLib_lab7/DAL/DAL.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Audio.cs" />
     <Compile Include="Models\AudioContext.cs" />
+    <Compile Include="Models\LoginInfo.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AudioRepository.cs" />
